Revision history for Perl extension Tk::AppWindow.

0.19 Wed Dec 18 2024
	- Lowered required version of File::Spec to 3.75

0.18 Wed Dec 18 2024
	- Added method popForm to Tk::AppWindow.
	- Added method imagerFont to extension Art.
	- Improved File icon generation in extension Art.
	- Extension Settings supports new version of Tk::QuickForm.

0.17 Mon Dec 02 2024
	- Repaired output for checking updates.
	- Added file dialog widget Tk::FilePicker to Tk::AppWindow;
	- Opening multiple files in MDI.
	- Changed bugtracker.
	- Updated documentation.
	- Tk::DynaMouseWheelBind became a prerequisite.

0.16 Sat Nov 09 2024
	- Removed extensions Navigator NavigatorPanel and ToolPanel, they are obsolete.
	- Removed methods geo* from Tk::AppWindow and removed it's binding to <Configure>
	- Extension Panels now can also operate in grid mode
	- Added method text2image to extension Art. We can now rotate text.
	- Side bars can now have vertical text labels.
	- More button now has an icon

0.15 Sat Oct 12 2024
	- Added pause method to Tk::AppWindow
	- Added extension Selector
	- Removed method OnResize in Tk::AppWindow::Ext::SideBars
	- Deprecated extensions Navigator, NavigatorPanel and ToolPanel.
	- Updated documentation.
	- Fixed all pod errors.

0.14 Tue Sep 17 2024
	- Fixed bug with selecting page in extension SideBars.

0.13 Tue Sep 17 2024
	- Fixed crashes with extension SideBars.
	- Updated documentation.

0.12 Tue Sep 10 2024
	- Added ReConfigure method to extension SideBars.
	- Fixed some issues in exenstion SideBars and Panels
	- Extension help now uses Tk::PodViewer instead of Tk::Pod

0.11 Wed Jul 10 2024
	- Extension Help: components tab in About box is now a HList widget.
	- Extension Help: added menu option to check for updates.
	- Extension Panels: revised
	- Extension SideBars: added
	- Baseclasses PanelExtension and SidePanel now obsolete and removed.
	- Extensions NavigatorPanel, Statusbar, ToolBar and ToolPanel now inherit Extension.

0.10 Mon Jun 17 2024